# python-make-poetry-azdo

./: .gitignore  Makefile  README.md  README.rst  azure-pipelines.yaml  go.mod  main.go  pyproject.toml
cmd/: hello_world.go  hello_world_test.go
pkg/: hello_world.go  hello_world_test.go
src/bowdata/sandbox/python_package/: __init__.py  main.py
templates/jobs/: base-job.yaml  make-job.yaml
templates/stages/: build-stage.yaml  lint-stage.yaml  test-stage.yaml
templates/steps/: make-step.yaml  publish-artifact-step.yaml
tests/: test_hello_world.py
