[tool.poetry]
name = "bowdata-sandbox-python-package"
version = "0.1.1"
description = "hello world poetry"
authors = ["Oliver Richardson <oliver@bow-data.com>"]
readme = "README.md"
packages = [{include = "bowdata", from = "src"}]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["bowdata.*"]
# namespaces = true

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
pydantic = "<1.10"
bowdata-toolkits-azdo = "*"

# Dev
setuptools = "^69.1.0"
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"

# Docs
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"

# Lint
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "*"
flake8-import-order = "*"
flake8_formatter_junit_xml = "*"
flake8-docstrings = "*"

# Test
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
artifacts-keyring = "^0.3.4"
pytest = "*"
pytest-cov = "*"


[[tool.poetry.source]]
name = "bowdata"
url = "https://pkgs.dev.azure.com/bowdata/_packaging/bowdata/pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
